# anzen-web-api

./: Cargo.toml  Makefile  build.rs  rustfmt.toml
anzen/v1/: anzen.proto  commands.proto
proto/: README.md
proto/anzen/v1/: commands.proto  data.proto  devices.proto  events.proto  plugins.proto  security.proto
src/: command.rs  config.rs  main.rs  model.rs  routes.rs
src/model/: helpers.rs  pipeline.rs
src/routes/: account.rs  auth.rs  corefuncs.rs  cors.rs  data.rs  errors.rs  helpers.rs  returns.rs  state.rs
