[package]
name = "anzen-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
anzen-lib = { path = "../anzen-rust-lib/" }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["sync", "rt", "rt-multi-thread"] }
toml = "0.5.9"
tonic = { version = "0.8.2", default-features = false }
mongodb = "2.3.1"
rust-argon2 = "1.0.0"
rand = "0.8.5"
jsonwebtoken = "8.1.1"

